# Godot-Project-Manager

./: package-lock.json  package.json
.github/workflows/: build.yaml
src/: App.module.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: environmnet.rs  main.rs  mod.rs  test_data.rs
src-tauri/src/command/: command.rs
src-tauri/src/directory/: config_directory_service.rs  directory.rs  mod.rs  project_data.rs  tests.rs
src-tauri/src/fetcher/: download_service.rs  fetcher.rs  mod.rs  os_type.rs
src-tauri/src/godot_service/: godot_engine_service.rs  godot_engine_version.rs  mod.rs
src-tauri/src/news/: news.rs
src-tauri/src/project/: mod.rs  project_data.rs  project_service.rs
src-tauri/src/service/: mod.rs  project_service.rs
src/components/: EnginePage.module.css  EnginePage.tsx  IconButton.tsx  NewsItem.tsx  NewsList.tsx  NewsPage.tsx  ProjectPage.tsx  SettingsPage.tsx  SideBar.module.css  SideBar.tsx
src/css-modules/: EnginePage.module.css  IconButton.module.css  NewsItem.module.css  NewsList.module.css  ProjectPage.module.css  SettingsPage.module.css  SideBar.module.css
src/data/: GodotEngineResponse.ts  GodotEngineVersion.ts  NewsEntry.ts  PageEnum.ts  ProjectData.ts
