[package]
name = "godot_manager"
version = "0.8.0"
description = "A manager for Godot engines and projects"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
reqwest = {version = "0.11.23", features = ["stream"] }
tokio = { version = "1.35.1", features = ["full"] }
zip-extract = "0.1.2"
regex = "1.10.2"
chrono = "0.4.34"
tokio-stream = "0.1.14"
scraper = "0.19.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
